# cli

./: .gitignore  README.md  pyproject.toml
c/: cli.py
c/aws/: cert.py  check.py  cli.py  logs.py  runner.py  static_site.py  zone.py
c/claude/: schedule_prompt.py
c/godaddy/: api.py  cli.py  configure.py  set_ns.py
c/mcp/: __init__.py  cli.py  logs_server.py
