[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c-cli"
version = "0.1.0"
description = "Personal CLI (c) — growing toolbox, AWS first"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "mcp>=1.2",
]

[project.scripts]
c = "c.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["c*"]
